...
        return VStack {
            Text("Scores")
            
                List {
                    Section {
                        if maxScores.isEmpty {
                            Text("Good luck on obtaining full marks!")
                        } else {
                            ForEach(maxScores) { score in
                                HStack {
                                    Text("Score: \(score.score)")
                                    Spacer()
                                    Text("Date: \(dateFormatter.string(from: score.date))")
...
